<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Principal" />

        <item
            android:id="@+id/nav_perf"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/Perfil" />

        <item
            android:id="@+id/nav_ubi"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/Ubicacion" />
        <item
            android:id="@+id/nav_conf"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Configuracion" />
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/CerrarSesion" />
        </menu>
    </item>

</menu>
