<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jorge.adaptable.RegistroActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        android:textSize="40dp"
        android:gravity="center"
        android:textColor="@color/darkorange"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/eUsuario2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/ePassword2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/repassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/eReppass"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:id="@+id/eEmail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:background="@drawable/fondo"
            android:layout_weight="1"
            android:textColor="@color/darkorange"
            android:id="@+id/bReg"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Cancelar"
            android:background="@drawable/fondo"
            android:textColor="@color/darkorange"
            android:layout_weight="1"
            android:id="@+id/bCan"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>
