<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jorge.adaptable.SearchActivity"
    tools:showIn="@layout/app_bar_search"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <fragment
        android:name="com.example.jorge.adaptable.BarraFragment"
        android:id="@+id/fragment_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/dimgray"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/Buscar"
            android:textAlignment="center"
            android:id="@+id/eBusq"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_search_black_24dp"
            android:id="@+id/bBusq2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/BuscarOf"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkorange"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/RopaMasc"
                android:id="@+id/tRopMasc"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkorange"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/RopaFem"
                android:id="@+id/tRopFem"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkorange"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/Restaurantes"
                android:id="@+id/tRest"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkorange"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/Conciertos"
                android:id="@+id/tConc"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkorange"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/ArtDep"
                android:id="@+id/tArtDep"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkorange"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/ArtHog"
                android:id="@+id/tArtHog"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>