<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jorge.adaptable.SettingsActivity"
    tools:showIn="@layout/app_bar_settings"
    android:background="@drawable/fondo"
    android:orientation="vertical">


    <fragment
        android:name="com.example.jorge.adaptable.BarraFragment"
        android:id="@+id/fragment_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/conf1"
                android:layout_gravity="center"/>

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/fondo"
                android:textColor="@color/darkorange"
                android:layout_weight="2"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/conf2"
                android:layout_gravity="center"/>

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textColor="@color/darkorange"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:background="@drawable/fondo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/conf3"
                android:layout_gravity="center"/>

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textColor="@color/darkorange"
                android:background="@drawable/fondo"
                android:layout_weight="2"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>